--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,6 +3,11 @@
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.26);
   }
   
+  .nav-item {
+    text-decoration: none;
+    color: #fff;
+  }
+  
   .icon {
     width: 1.8rem;
     height: 1.3rem;
@@ -26,4 +31,10 @@
     align-items: center;
     border-radius: 25px;
     font-weight: bold;
+  }
+  a:hover {
+    color: rgb(185, 206, 50);
+  }
+  a.active {
+    color: rgb(185, 206, 50);
   }
