--- a/src/Components/Title/Title.css
+++ b/src/Components/Title/Title.css
@@ -4,5 +4,8 @@
     /* padding: 10px; */
     /* font-size: 24px; */
     /* font-weight: 600; */
-    border-left: 5px solid red;
+    border-left: 5px solid #EC445E;
+    border-right: 5px solid #EC445E;
+    margin-left: auto;
+    margin-right: auto;
   }
